--- a/ci/image/Dockerfile
+++ b/ci/image/Dockerfile
@@ -1,7 +1,7 @@
 FROM golang:1
 
-RUN apt-get update
-RUN apt-get install -y npm
+RUN apt-get update && \
+    apt-get install -y npm
 
 ENV GOFLAGS="-mod=readonly"
 ENV PAGER=cat
@@ -9,6 +9,6 @@ ENV CI=true
 ENV MAKEFLAGS="--jobs=8 --output-sync=target"
 
 RUN npm install -g prettier
-RUN go get golang.org/x/tools/cmd/goimports
-RUN go get golang.org/x/lint/golint
-RUN go get github.com/mattn/goveralls
+RUN go install golang.org/x/tools/cmd/goimports@latest
+RUN go install golang.org/x/lint/golint@latest
+RUN go install github.com/mattn/goveralls@latest
